experiments/natours/src/styles/components/_card.scss
.card {
  //FUNCTIONALITY
  perspective: 150rem;
  -moz-perspective: 150rem;
  position: relative;
  height: 50rem;

  &__side {
    color: white;
    font-size: 2rem;
    height: 50rem;
    transition: all .8s ease;
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    backface-visibility: hidden;
    border-radius: 3px;
    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);

    &--front {
      background-color: $color-white;
    }

    &--back {
      transform: rotateY(-180deg);

      &-1 {
        background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
      }

    }
  }

  &:hover &__side--front {
    transform: rotateY(180deg);
  }

  &:hover &__side--back {
    transform: rotateY(0);
  }

  //FRONT SIZE STYLING
  &__picture {
    background-size: cover;
    height: 23rem;
    background-blend-mode: screen;

    &--1 {
      background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
      url(../public/assets/img/nat-5.jpg);
    }
    &--2 {
      background-image: url(../public/assets/img/nat-6.jpg);
    }
    &--3 {
      background-image: url(../public/assets/img/nat-7.jpg);
    }

  }
}

